@@ -11,6 +11,7 @@
 	- permit multiline macro expansions with comments and %if.
 	- add pl translation and man pages (PLD team - from Tomasz Kloczko).
 	- fix: incomplete cleanup if --rebuilddb fails (#4115).
+	- add versions to provides.
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
